[package]
name = "img_service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "img_service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
reqwest = "0.11.11"
serde = { version = "1.0.144", features = ["derive"]}
config = "0.13"
chrono = "0.4.22"
uuid = { version = "1.1.2", features = ["v4"] }
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
secrecy = { version = "0.8", features = ["serde"]}
tracing-actix-web = "0.6.0"
serde-aux = "3"
unicode-segmentation = "1.9.0"
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6"
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]

[dev-dependencies]
claim = "0.5"
once_cell = "1"
cargo-tarpaulin = "*"
cargo-watch = "*"
cargo-audit = "*"
cargo-expand = "*"
cargo-udeps = "*"
